--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "scripts": {
-    "start": "node ./index.js"
-  },
-  "dependencies": {
-    "body-parser": "^1.20.1",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "sqlite3": "^5.1.2"
-  }
+ "scripts": {
+   "start": "nodemon ./index.js"
+},
+"dependencies": {
+"body-parser": "^1.20.1",
+"cors": "^2.8.5",
+"express": "^4.18.2",
+"nodemon": "^2.0.20",
+"sqlite3": "^5.1.2"
+}
 }
